--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,13 +13,16 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/native": "^5.7.1",
+    "@react-navigation/stack": "^5.8.0",
+    "firebase": "^7.17.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0"
+    "react-native-screens": "^2.9.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
