--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.63.2",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
