--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.2",
+    "@react-navigation/material-top-tabs": "^5.3.6",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.8.0",
     "firebase": "^7.17.1",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.0.0",
     "styled-components": "^5.1.1"
   },
