--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAliQJpsV_GonmdrZTaoWwvNxG09hY3VLE" />
     </application>
 
 </manifest>
