--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,8 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.0.0",
     "styled-components": "^5.1.1"
